--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate code coverage
-        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
-      - name: Show code coverage results
-        run: cat lcov.info
+        run: cargo llvm-cov
+      # --all-features --workspace --lcov --output-path lcov.info
+      # - name: Show code coverage results
+      #   run: cat lcov.info
