--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[lib]
+name = "testing"
+path = "src/main.rs"  # Change this to "src/main.rs" if you are using main.rs
 
-[profile.test]
-llvm-cov = true
+[dependencies]
+cargo-llvm-cov = "0.6.4"
