--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,10 +19,7 @@ jobs:
         run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
-      - name: Install cargo-llvm-cov
-        uses: taiki-e/install-action@cargo-llvm-cov
+      - name: Install llvm-cov-show
+        run: cargo install llvm-cov-show
       - name: Generate code coverage
-        run: cargo llvm-cov
-      # --all-features --workspace --lcov --output-path lcov.info
-      # - name: Show code coverage results
-      #   run: cat lcov.info
+        run: llvm-cov-show
