--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,10 +19,10 @@ jobs:
         run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
-      - name: Install cargo-llvm-cov
-        uses: taiki-e/install-action@cargo-llvm-cov
-      - name: Generate code coverage
-        run: cargo llvm-cov
+      # - name: Install cargo-llvm-cov
+      #   uses: taiki-e/install-action@cargo-llvm-cov
+      # - name: Generate code coverage
+      #   run: cargo llvm-cov
 
       - uses: dtolnay/rust-toolchain@stable
         with:
