--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,7 +31,9 @@ jobs:
       - uses: taiki-e/install-action@nextest
 
       - name: Collect coverage data
-        run: cargo llvm-cov nextest
+        run: |
+          cargo llvm-cov nextest
+          cargo llvm-cov --doc
       # --all-features --workspace --lcov --output-path lcov.info
       # - name: Show code coverage results
       #   run: cat lcov.info
