--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build
-        run: cargo build --verbose
+      # - name: Build
+      #   run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
       # - name: Install cargo-llvm-cov
