--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,23 +15,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      # - name: Build
-      #   run: cargo build --verbose
-      # - name: Run tests
-      #   run: cargo test --verbose
-      # - name: Install cargo-llvm-cov
-      #   uses: taiki-e/install-action@cargo-llvm-cov
-      # - name: Generate code coverage
-      #   run: cargo llvm-cov
 
-      - uses: dtolnay/rust-toolchain@stable
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
         with:
-          components: llvm-tools-preview
-      - uses: taiki-e/install-action@cargo-llvm-cov
-      - uses: taiki-e/install-action@nextest
+          toolchain: stable
 
-      - name: Collect coverage data
-        run: cargo llvm-cov nextest
-      # --all-features --workspace --lcov --output-path lcov.info
-      # - name: Show code coverage results
-      #   run: cat lcov.info
+      - name: Install grcov
+        run: cargo install grcov
+
+      - name: Run tests with coverage
+        run: |
+          cargo clean
+          RUSTFLAGS="-Zinstrument-coverage" cargo test --all
+          grcov . --binary-path ./target/debug/ -s . -t cobertura --branch --ignore-not-existing --ignore "/*" -o cobertura.xml
