--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: ["*"] # Run on every branch
+    branches: ["*"]
   pull_request:
-    branches: ["*"] # Run on every branch
+    branches: ["*"]
 
 env:
   CARGO_TERM_COLOR: always
@@ -15,15 +15,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up Rust
+      
+      - name: Set up Rust nightly
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
-
+          toolchain: nightly
+      
       - name: Install grcov
         run: cargo install grcov
-
+      
       - name: Run tests with coverage
         run: |
           cargo clean
