--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,13 @@ name = "coverage_might_work"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 name = "testing"
-path = "src/main.rs"  # Change this to "src/main.rs" if you are using main.rs
+path = "src/testing.rs"  # Separate source file for the library target
 
+[[bin]]
+name = "coverage_might_work"
+path = "src/main.rs"  # Source file for the binary target
 
 [dependencies]
 cargo-llvm-cov = "0.6.4"
