--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: taiki-e/install-action@cargo-llvm-cov
 
       - name: Collect coverage data
-        run: cargo llvm-cov --cobertura
+        run: cargo llvm-cov --cobertura --output-path coverage.xml
       # --all-features --workspace --lcov --output-path lcov.info
       # - name: Show code coverage results
       #   run: cat lcov.info
