--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,6 +31,16 @@ jobs:
 
       - name: Collect coverage data
         run: cargo llvm-cov --cobertura --output-path coverage.xml
-      # --all-features --workspace --lcov --output-path lcov.info
-      # - name: Show code coverage results
-      #   run: cat lcov.info
+
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: coverage.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: "60 80"
