--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,4 +43,11 @@ jobs:
           hide_complexity: true
           indicators: true
           output: both
-          thresholds: "20 80"
+          thresholds: "50 80"
+
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: code-coverage-results.md
