--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,14 +15,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      # - name: Build
-      #   run: cargo build --verbose
-      # - name: Run tests
-      #   run: cargo test --verbose
-      # - name: Install cargo-llvm-cov
-      #   uses: taiki-e/install-action@cargo-llvm-cov
-      # - name: Generate code coverage
-      #   run: cargo llvm-cov
 
       - uses: dtolnay/rust-toolchain@stable
         with:
@@ -44,3 +36,31 @@ jobs:
           indicators: true
           output: both
           thresholds: "20 80"
+          
+         # Upload the coverage.xml as an artifact for the next job
+      - uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.xml
+
+  upload_coverage_to_influxdb:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download coverage report
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage-report
+
+      - name: Extract coverage percentage
+        id: get_coverage
+        run: |
+          COVERAGE=$(grep 'line-rate' coverage.xml | awk -F'"' '{print $4 * 100}')
+          echo "Coverage: $COVERAGE%"
+          echo "::set-output name=coverage::$COVERAGE"
+
+      - name: Upload coverage to InfluxDB
+        run: |
+          curl -X POST "${{ secrets.INFLUXDB_URL }}/api/v2/write?org=${{ secrets.INFLUXDB_ORG }}&bucket=${{ secrets.INFLUXDB_BUCKET }}&precision=s" \
+          -H "Authorization: Token ${{ secrets.INFLUXDB_TOKEN }}" \
+          --data-raw "rust_code_coverage,repository=${GITHUB_REPOSITORY},branch=master coverage=${{ steps.get_coverage.outputs.coverage }}"
