--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: ["master"]
+    branches: '**'
   pull_request:
-    branches: ["master"]
+    branches: '**'
 
 env:
   CARGO_TERM_COLOR: always
@@ -22,20 +22,7 @@ jobs:
       - uses: taiki-e/install-action@cargo-llvm-cov
 
       - name: Collect coverage data
-        run: cargo llvm-cov --cobertura --output-path coverage.xml
-
-      - name: Code Coverage Report
-        uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: coverage.xml
-          badge: true
-          fail_below_min: true
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: "20 80"
+        run: cargo llvm-cov --xml --output-path coverage.xml
           
          # Upload the coverage.xml as an artifact for the next job
       - uses: actions/upload-artifact@v3
