--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -49,4 +49,6 @@ jobs:
 
       - name: Upload coverage to InfluxDB
         run: |
-          curl -X POST "https://influx.eb-qute.eb-raptor.com/api/v2/write?org=2eaddcf5db9da1a0&bucket=48bc9e19d96e8721&precision=s" -H "Authorization: Token doan73lQJnEuNXy_WEb3fh3jeR7O8-iyRObOF4_40B2J0lRXgEzcHfaikI-5SJI9FQfdfM1KkOt5cTLLmXpryQ==" --data-raw "rust_code_coverage,repository=something,branch=aaa coverage=27.27"
+          curl -X POST "${{ secrets.INFLUXDB_URL }}/api/v2/write?org=${{ secrets.INFLUXDB_ORG }}&bucket=${{ secrets.INFLUXDB_BUCKET }}&precision=s" \
+          -H "Authorization: Token ${{ secrets.INFLUXDB_TOKEN }}" \
+          --data-raw "rust_code_coverage,repository=${GITHUB_REPOSITORY},branch=${{ github.ref_name }} coverage=${{ steps.get_coverage.outputs.coverage }}"
