--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,10 +19,6 @@ jobs:
       #   run: cargo build --verbose
       # - name: Run tests
       #   run: cargo test --verbose
-      # - name: Install cargo-llvm-cov
-      #   uses: taiki-e/install-action@cargo-llvm-cov
-      # - name: Generate code coverage
-      #   run: cargo llvm-cov
 
       - uses: dtolnay/rust-toolchain@stable
         with:
@@ -44,3 +40,23 @@ jobs:
           indicators: true
           output: both
           thresholds: "20 80"
+
+      - name: Check for "Coverage Override" label
+        if: github.event_name == 'pull_request'
+        id: check_label
+        uses: actions/github-script@v5
+        with:
+          script: |
+            const { data: labels } = await github.issues.listLabelsOnIssue({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.pull_request.number
+            });
+            const coverageOverrideLabel = labels.find(label => label.name === 'Coverage Override');
+            if (coverageOverrideLabel) {
+              console.log('Coverage override label found. Allowing merge.');
+              process.exit(0);
+            } else {
+              console.log('Coverage override label not found. Blocking merge.');
+              process.exit(1);
+            }
