--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,11 @@ name: Rust
 
 on:
   push:
-    branches: ["master"]
+    branches:
+      - '*'  # Run on all branches
   pull_request:
-    branches: ["master"]
+    branches:
+      - '*'  # Run on all branches
 
 env:
   CARGO_TERM_COLOR: always
