--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,9 +20,13 @@ jobs:
         with:
           components: llvm-tools-preview
       - uses: taiki-e/install-action@cargo-llvm-cov
+      - uses: taiki-e/install-action@nextest
 
       - name: Collect coverage data
         run: cargo llvm-cov --cobertura --output-path coverage.xml
+
+      - name: Run Text coverage data
+        run: cargo llvm-cov nextest
 
       - name: Code Coverage Report
         id: coverage
