--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,10 +11,12 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+      name: Run tests
+      runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
+      steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up Rust
         uses: actions/setup-rust@v1
@@ -25,52 +27,3 @@ jobs:
         run: |
           cargo build --verbose
           cargo test --verbose
-
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          components: llvm-tools-preview
-      - uses: taiki-e/install-action@cargo-llvm-cov
-      - uses: taiki-e/install-action@nextest
-
-      - name: Collect coverage data
-        run: cargo llvm-cov --cobertura --output-path coverage.xml
-
-      - name: Run Text coverage data
-        run: cargo llvm-cov nextest
-
-      - name: Code Coverage Report
-        id: coverage
-        uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: coverage.xml
-          badge: true
-          fail_below_min: true
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: "50 80"
-
-      - name: Add Label if Coverage Below Threshold
-        if: ${{ steps.coverage.outcome == 'failure' }}
-        run: |
-          # Get pull request number
-          PR_NUMBER=$(jq -r '.pull_request.number' "$GITHUB_EVENT_PATH")
-
-          # Add label to pull request
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{"labels":["bypass_coverage"]}' \
-            "https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${PR_NUMBER}/labels"
-
-      - uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.pulls.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '👋 Thanks for reporting!'
-            })
